tests/cli/snapshots/cli__check__string_array_iteration_same_file_some_missing.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Features.prefix.load"  missing-key
  --> ./src/app.tsx:4:25
  |
4 | FEATURE_KEYS.map((k) => t(`prefix.${k}`));
  |                         ^


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
