tests/cli/snapshots/cli__check__translation_prop_missing_key_reported.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Landing.subtitle"  missing-key
  --> ./src/landing-content.tsx:6:17
  |
6 |             <p>{t("subtitle")}</p>
  |                 ^


✖ 1 problems (1 error, 0 warnings)

----- stderr -----
