tests/cli/snapshots/cli__check__verbose_with_parse_error.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - "--verbose"
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----
error: "Failed to parse tsx string: Error { error: (14..14, Expected("</", "<eof>")) }"  [parse-error]
  --> ./src/broken.tsx:0:0


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
Warning: ./src/broken.tsx - Failed to parse tsx string: Error { error: (14..14, Expected("</", "<eof>")) }
error: 1 file(s) could not be parsed
